OldArchive/dfa90d6c23807869d531cce51a410ccd-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:27:11: error: ‘step’ does not name a type
     const step* next;
           ^
main.cpp: In constructor ‘move::move()’:
main.cpp:29:14: error: class ‘move’ does not have any field named ‘next’
     move() : next(begein(steps))
              ^
main.cpp:29:31: error: ‘begein’ was not declared in this scope
     move() : next(begein(steps))
                               ^
main.cpp:31:9: error: ‘random_shuffle’ is not a member of ‘std’
         std::random_shuffle(begin(steps), end(steps));
         ^
main.cpp: In function ‘int main()’:
main.cpp:37:5: error: ‘vector’ is not a member of ‘std’
     std::vector<char> board(100, Empty);
     ^
main.cpp:37:17: error: expected primary-expression before ‘char’
     std::vector<char> board(100, Empty);
                 ^
main.cpp:37:17: error: expected ‘;’ before ‘char’
main.cpp:41:5: error: ‘board’ was not declared in this scope
     board[pos]   = station++;
     ^
main.cpp: In lambda function:
main.cpp:49:25: error: ‘struct move’ has no member named ‘next’
         while (*pending.next)
                         ^
main.cpp:52:38: error: ‘struct move’ has no member named ‘next’
             pending.taken = *pending.next++;
                                      ^
main.cpp: In lambda function:
main.cpp:71:35: error: ‘begin’ was not declared in this scope
         for(auto row = begin(board); row<end(board); row+=10)
                                   ^
main.cpp:71:35: note: suggested alternative:
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/stdexcept:39,
                 from /usr/include/c++/4.8/array:38,
                 from /usr/include/c++/4.8/tuple:39,
                 from /usr/include/c++/4.8/functional:55,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:87:5: note:   ‘std::begin’
     begin(_Tp (&__arr)[_Nm])
     ^
main.cpp:71:51: error: ‘end’ was not declared in this scope
         for(auto row = begin(board); row<end(board); row+=10)
                                                   ^
main.cpp:71:51: note: suggested alternative:
In file included from /usr/include/c++/4.8/string:51:0,
                 from /usr/include/c++/4.8/stdexcept:39,
                 from /usr/include/c++/4.8/array:38,
                 from /usr/include/c++/4.8/tuple:39,
                 from /usr/include/c++/4.8/functional:55,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/range_access.h:97:5: note:   ‘std::end’
     end(_Tp (&__arr)[_Nm])
     ^
